--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-  "builds": [{ "src": "src/**/*.ts", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/dist/$1" }]
+  "builds": [{ "src": "./dist/app.js", "use": "@vercel/node" }],
+  "config": { "includeFiles": ["./dist/**"] },
+  "routes": [{ "src": "/(.*)", "dest": "./dist/app.js" }]
 }
