--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-  "builds": [{ "src": "./dist/app.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "./dist/app.js" }]
+  "version": 2,
+  "routes": [{ "src": "/(.*)", "dest": "/index.html" }],
+  "builds": [{ "src": "index.html", "use": "@vercel/static" }]
 }
