--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,6 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
-    "target": "ES6",
-    "module": "ESNext"
-  },
-  "include": ["./src"]
+    "target": "ES2015"
+  }
 }
