--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
+  "installCommand": "npm install",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "builds": [{ "src": "index.html", "use": "@vercel/static" }],
   "routes": [{ "src": "./(.*)", "dest": "./index.html" }]
 }
