--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "installCommand": "npm install",
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run vercel-build",
   "outputDirectory": "dist",
-  "routes": [{ "src": "./(.*)", "dest": "./index.html" }]
+  "routes": [{ "src": "/(.*)", "dest": "/index.html" }]
 }
