--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,8 @@
   "installCommand": "npm install",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "routes": [{ "src": "/(.*)", "dest": "/static/index.html" }]
+  "routes": [
+    { "src": "/app.js", "dest": "/app.js" },
+    { "src": "/(.*)", "dest": "/static/index.html" }
+  ]
 }
