--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,5 @@
   "installCommand": "npm install",
   "buildCommand": "npm run vercel-build",
   "outputDirectory": "dist",
-  "routes": [{ "src": "/(.*)", "dest": "/static/index.html" }]
+  "routes": [{ "src": "/(.*)", "dest": "/index.html" }]
 }
