--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "main": "index.js",
   "scripts": {
     "compile": "tsc --watch",
-    "build": "tsc && copyfiles -u 1 ./src/static/**/* ./dist",
+    "build": "tsc && cp -a ./src/static/. ./dist/.",
     "postinstall": "npm run build",
-    "start": "node dist/app.js",
-    "server": "live-server --watch=dist --port=8080"
+    "start": "node dist/app.js"
   },
   "devDependencies": {
-    "copyfiles": "^2.4.1",
-    "live-server": "^1.2.2",
     "typescript": "^4.0.0"
   },
   "keywords": [],
