--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "ts.tasklist.exercise",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "compile": "tsc --watch",
-    "build": "tsc && cp -a ./src/static/. ./dist/.",
+    "build": "tsc && copyfiles -a ./src/static/. ./dist/.",
     "postinstall": "npm run build",
     "start": "node dist/app.js"
   },
   "devDependencies": {
-    "typescript": "^4.0.0"
+    "typescript": "^4.0.0",
+    "copyfiles": "^2.4.1"
   },
   "keywords": [],
   "author": "Anita_Baron <anita.baron.it@gmail.com>",
