--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,6 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
-    "target": "ES2015",
-    "module": "ES6",
-    "moduleResolution": "node"
+    "target": "ES2015"
   }
 }
